manifests/dev-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-dev
  annotations:
    external-dns.alpha.kubernetes.io/hostname: dev.oneplace.com
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: LoadBalancer
  selector:
    app: nginx
