manifests/web-svc-cip.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-web
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
  selector:
    app: nginx
