manifests/web-svc-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-web
  annotations:
    external-dns.alpha.kubernetes.io/hostname: web.oneplace.com
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
  selector:
    app: nginx
